design/common.blocks/input/_type/input_type_link.styl
.input_type_link
{
    border-color: transparent;

    .input__box
    {
        display:        table-cell;
        vertical-align: middle;
    }

    .input__control
    {
        display: none;

        padding-left: 0 !important;
    }

    &.input_size_s
    {
        .input__box
        {
            height:        control_size_s;

            padding-left:  inputs_padding_s;
            padding-right: inputs_padding_s;
        }
    }

    &.input_size_m
    {
        .input__box
        {
            height:        control_size_m;

            padding-left:  inputs_padding_m;
            padding-right: inputs_padding_m;
        }
    }

    &.input_size_l
    {
        .input__box
        {
            height:        control_size_l;

            padding-left:  inputs_padding_l;
            padding-right: inputs_padding_l;
        }
    }

    &.input_size_xl
    {
        .input__box
        {
            height:        control_size_xl;

            padding-left:  inputs_padding_xl;
            padding-right: inputs_padding_xl;
        }
    }

    &.input_focused {

        .input__trigger
        {
            display: none;
        }

        .input__box
        {
            padding-right: 0;
        }

        .input__control
        {
            display: inherit;
        }
    }

    &.input_empty .input__trigger {
        opacity: 0.5;
    }
}

